--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "@as-integrations/next": "^3.2.0",
+    "@graphql-tools/schema": "^10.0.24",
     "@prisma/client": "^6.12.0",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
@@ -18,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/graphql": "^14.2.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
